[package]
name = "blocklist"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.9"
chrono = "0.4.23"
clokwerk = "0.4.0"
hyper = "0.14.24"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
